--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	
 	<div class="col s12 m6" id="sec_intern">
 		  		  <div class="port_card">
-    <div class="cover" style="background-image: url('images/fcut2.jpg')">
+    <div class="cover" style="background-image: url('images/itcenter.jpg')">
       <label>
         <i>
           <svg x="0px" y="0px" width="17px" height="17px">
